# p2p-tetris

./: README.md  main.py  pyproject.toml
doc/: proposal.md
docs/: RL_agent.md  detailed-design.md  high-level-design.md  local-run.md  packaging.md  prompt.md  proposal.md
docs/mac-packaging/: execution.md  proposal.md
docs/tasks/: battle-rules.md  client-gui.md  client-runtime.md  common.md  controllers.md  game-core.md  net.md  packaging.md  progress.md  server.md  tests.md
docs/v101-debug-p2p-garbage/: proposal.md
packaging/macos/: P2P-Tetris.icns  pysidedeploy.spec
src/p2p_tetris/: __init__.py
src/p2p_tetris/battle/: __init__.py  _game_core_events.py  attack.py  events.py  garbage.py  match_rules.py  scoring.py
src/p2p_tetris/client/: __init__.py  app.py  events.py  local_session.py  network.py  network_session.py  versus_session.py  view_models.py
src/p2p_tetris/common/: __init__.py  config.py  ids.py  (+1 more)
tests/: conftest.py
tests/battle/: test_attack.py  test_events.py  test_garbage.py  test_match_rules.py
tests/client/: __init__.py  action_scripts.py  test_local_session.py  test_versus_session.py
tests/common/: test_config.py  test_ids.py  test_time.py
tests/controllers/: test_keyboard_controller.py  test_scripted_controller.py
tests/game_core/: test_actions_and_pieces.py  test_board.py  test_engine.py  test_randomizer_and_rotation.py
tests/gui/: conftest.py  test_smoke.py
tests/net/: test_fixtures.py  test_protocol.py  test_reliability.py  test_udp.py
tests/server/: test_app.py  test_matches.py  test_queue.py  test_sessions.py
(+42 files in other folders)
