[project]
name = "p2p-tetris"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "PySide6>=6.8",
]

[project.scripts]
p2p-tetris-client = "p2p_tetris.client.app:main"
p2p-tetris-server = "p2p_tetris.server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/p2p_tetris"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]
